Apply the patch from bug 117513 to fix several auto away issues with the code that does this.

Patch by Issac Wilcox. Thanks so much for the patch!

BUG: 120989
BUG: 92949
BUG: 117513


svn path=/branches/kopete/0.12/kopete/; revision=511207